--- a/dashboard/css/style.css
+++ b/dashboard/css/style.css
@@ -49,6 +49,8 @@
 }
 .body {
 	display: flex;
+    height: 100vh;
+	overflow: hidden; 
 }
 .section-1 {
 	width: 100%;
@@ -59,6 +61,8 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	overflow-y: auto;
+	height: calc(100vh - 60px); /* Ajuste pour le header */
 }
 .section-1 h1 {
 	color: #fff;
@@ -71,10 +75,14 @@
 	padding: 7px;
 	border-radius: 5px;
 }
-.side-bar ul {
-	margin-top: 20px;
-	list-style: none;
+#content-section {
+	flex-grow: 1;
+	overflow-y: auto;
+	padding: 20px;
+	height: 100vh;
 }
+
+
 .side-bar ul li {
 	font-size: 16px;
 	padding: 15px 0px;
